--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ requires = ["setuptools>=58.0.0", "wheel", "setuptools_scm[toml]>=6.3.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
-write_to = "nrs/_version.py"
+write_to = "qlipper/_version.py"
 
 [project]
-name = "new-romantic-sailor"
+name = "qlipper"
 description = "Python implementation of the Q-Law for solar sailing."
 readme = "README.md"
 requires-python = ">=3.9"
@@ -16,7 +16,7 @@ dependencies = ["jax", "diffrax", "jax-dataclasses"]
 dynamic = ["version"]
 
 [tool.setuptools.packages.find]
-include = ["nrs"]
+include = ["qlipper"]
 
 [project.urls]
-homepage = "https://github.com/itchono/jaxquest"
+homepage = "https://github.com/itchono/qlipper"
